<?xml version = "1.0" encoding = "utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height = "match_parent"
    tools:context = ".LoginActivity">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405"
        tools:layout_editor_absoluteX="16dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:src="@drawable/ekitab"
            android:layout_alignParentTop="true"
            android:layout_marginTop="50sp"/>

        <TextView
            android:id="@+id/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/logo"
            android:layout_marginTop="50sp"
            android:layout_marginStart="28dp"
            android:text="@string/login"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="28dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="28dp"
            android:autofillHints=""
            android:background="@drawable/edittext"
            android:elevation="10sp"
            android:focusable="true"
            android:hint="@string/masukkan_nama"
            android:inputType="text"
            android:paddingHorizontal="25sp"
            android:paddingVertical="20sp"
            android:textColorHighlight="@color/purple_700"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText"
            android:layout_alignEnd="@+id/editText"
            android:layout_alignParentStart="true"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/edittext"
            android:elevation="10sp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingHorizontal="25sp"
            android:paddingVertical="20sp"
            android:textColorHint="@color/black" />


        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="65sp"
            android:layout_below="@+id/editText2"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="28dp"
            android:background="@drawable/button"
            android:text="@string/loginbutton"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/textview2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button"
            android:layout_marginTop="100sp"
            android:layout_alignParentStart="true"
            android:layout_marginHorizontal="28sp"
            android:textAlignment="center"
            android:text="@string/orloginwith"
            android:textSize="20sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.15">

        <ImageView
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_margin="20sp"
            android:background="@drawable/edittext"
            android:elevation="5sp"
            android:padding="10sp"
            android:src="@drawable/google" />

        <ImageView
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_margin="20sp"
            android:background="@drawable/edittext"
            android:elevation="5sp"
            android:padding="10sp"
            android:src="@drawable/facebook" />

        <ImageView
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_margin="20sp"
            android:background="@drawable/edittext"
            android:elevation="5sp"
            android:padding="10sp"
            android:src="@drawable/twitter" />


    </LinearLayout>

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginBottom="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>